--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -31,7 +31,7 @@
                 <br>
                 <div class="selections">
                     <button class="content" onclick="openCake(event,'bento')"><img src="images/white-bento.png" style="width:200px"><p>Bento Cake</p></button>
-                    <button class="content" onclick="openCake(event,'d12')"><img src="images/pink-crownd-12.png" style="width:200px"><p>D12 Butter Cream</p></button>
+                    <button class="content" onclick="openCake(event,'d12')"><img src="images/blue-piebis-d12" style="width:200px"><p>D12 Butter Cream</p></button>
                     <button class="content" onclick="openCake(event,'d15')"><img src="images/skin-chocolate.png" style="width: 200px;"><p>D15 Butter Cream</p></button>
                     <button class="content" onclick="openCake(event,'mini-korean')"><img src="pumpkin-minikorean.png" style="width: 200px;"><p>Mini Korean</p></button>
                     <button><img src="images/yellow-popcorn-d12.png" style="width:200px"><p>D18 Butter Cream</p></button>
@@ -272,7 +272,7 @@
     <div id="d15" class="tabcontent">    
         <div class="container flex">
             <div class="left">
-                <img src="images/chocolate-coin.png" alt="Diameter 15cm Birthday Cake"/>
+                <img src="images/chocoball.png" alt="Diameter 15cm Birthday Cake"/>
             </div>
             <div class="right">
                 <h1>D15cm</h1>
@@ -313,23 +313,21 @@
         <div class="variation-details">
             <h2>Contoh Kue</h2>
             <div class="variation-img">
-            <img src="images/blue-leaf-d15.png"/>
-            <img src="images/blue-black-things.png"/>
             <img src="images/chat-bubble-d15.png"/>
+            <img src="images/kissemot-d15.png"/>
+            <img src="images/blue-leaf-d15.png"/>
             <img src="images/cherry-choco-d15.png"/>
             <img src="images/cherry-red-d15.png"/>
             <img src="images/cherry-yellow-d15.png"/>
             <img src="images/chocoball-d15.png"/>
             <img src="images/skin-chocolate.png"/>
             <img src="images/heart-cherry-d15.png"/>
-            <img src="images/kissemot-d15.png"/>
             <img src="images/one-pcs.png"/>
             <img src="images/powerpuff-d15.png"/>
             <img src="images/pink-ribbon-d15.png"/>
             <img src="images/red-flower-d15.png"/>
             <img src="images/red-topper-d15.png"/>
             <img src="images/tango-oreo-d15.png"/>
-            <img src="images/bus-cake.png"/>
             <img src="images/kids.png"/>
             <img src="images/white-chocodrip-d15.png"/>
             <img src="images/yellow-popcorn-d15.png"/>
