--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -31,9 +31,9 @@
                 <br>
                 <div class="selections">
                     <button class="content" onclick="openCake(event,'bento')"><img src="images/white-bento.png" style="width:200px"><p>Bento Cake</p></button>
-                    <button class="content" onclick="openCake(event,'d12')"><img src="images/blue-piebis-d12" style="width:200px"><p>D12 Butter Cream</p></button>
+                    <button class="content" onclick="openCake(event,'d12')"><img src="images/pink-piebis-d12.png" style="width:200px"><p>D12 Butter Cream</p></button>
                     <button class="content" onclick="openCake(event,'d15')"><img src="images/skin-chocolate.png" style="width: 200px;"><p>D15 Butter Cream</p></button>
-                    <button class="content" onclick="openCake(event,'mini-korean')"><img src="pumpkin-minikorean.png" style="width: 200px;"><p>Mini Korean</p></button>
+                    <button class="content" onclick="openCake(event,'mini-korean')"><img src="images/pumpkin-minikorean.png" style="width: 200px;"><p>Mini Korean</p></button>
                     <button><img src="images/yellow-popcorn-d12.png" style="width:200px"><p>D18 Butter Cream</p></button>
                     <button><img src="images/tango-oreo-d15.png" style="width:200px"><p>D20 Butter Cream</p></button>
                 </div>
