--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -17,12 +17,23 @@
     <nav>
 
         <div class="tab">
+            <button class="tablinks" onclick="openCake(event, 'about-us')">About Us</button>
             <button class="tablinks" onclick="openCake(event, 'home')">Home</button>
             <button class="tablinks" onclick="openCake(event, 'q&a')">FAQ</button>
             <button class="tablinks" onclick="openCake(event, 'contact')">Contact Us</button>
         </div>
     </nav>
 
+    <!--About us Section-->
+    <div class="container">
+        <div id="about-us" class="tabcontent">
+            <section id="about-us" class="section">
+                <h1 style="text-align: center; font-size: xx-large;">About Us</h1>
+                <!--Isi about us-->
+            </section>
+        </div>
+    </div>
+    
     <!--Home Section-->
     <div class="container">
         <div id="home" class="tabcontent">
