--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -25,14 +25,18 @@
     </nav>
 
     <!--About us Section-->
-    <div class="container">
-        <div id="about-us" class="tabcontent">
+    <div id="about-us" class="tabcontent">
             <section id="about-us" class="section">
                 <h1 style="text-align: center; font-size: xx-large;">About Us</h1>
-                <!--Isi about us-->
+                <div class="container flex">
+                    <div class="left">
+                        <img src="images/ROYAL CAKE savour full brown.png" style="width:100%;">
+                    </div>
+                    <div class="right">
+                    <p>PlaceholderPlaceholderPlaceholderPlaceholderPlaceholderPlaceholder</p>
+                </div>
             </section>
         </div>
-    </div>
     
     <!--Home Section-->
     <div class="container">
