cake tab revision

--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -122,25 +122,11 @@
                     <img src="images/bento-blue-lattice.png" alt="Bento Cake D10cm"/>
                 </div>
                 <div class="right">
-                    <h1>Bento Cake (D10cm)</h1>
-                        <div class="price-list">
-                        <h2>Price List:</h2>
-                        <h3>Ready Cake:</h3>
-                            <ul>
-                                <li>Rp40.000,-</li>
-                            </ul>
-                        <h3>Custom Cake:</h3>
-                            <ul>
-                                <li>Rp50.000,-</li>
-                            </ul>
-                        </div>
-                        <div class="variant-list">
-                        <h2>Cake Description:</h2>
-                            <ul>
-                                <li>Custom hiasan hanya pada permukaan kue.</li>
-                                <li>Isian chocolate cake polos.</li>
-
-                            </ul>
+                    <h1>Bento Cake</h1>
+                        <div class="desc">
+                        <p>Kue ulang tahun mini dalam wadah styrofoam yang mudah dibawa dan sederhana tetapi tetap berkesan.</p>
+                        <pre>Ukuran          :               Diameter 10cm<br>Harga            :               Mulai dari Rp40.000,-<br>Base kue       :               Chocolate cake
+                        </pre>
                         </div>
                     <div class="order">
                         <span>PEMESANAN</span>
