--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -156,23 +156,10 @@
                     </div>
                     <div class="right">
                         <h1>Mini Korean Cake (D10cm)</h1>
-                            <div class="price-list">
-                            <h2>Price List:</h2>
-                            <h3>Ready Cake:</h3>
-                                <ul>
-                                    <li>Rp50.000,-</li>
-                                </ul>
-                            <h3>Custom Cake:</h3>
-                                <ul>
-                                    <li>Rp60.000,-</li>
-                                </ul>
-                            </div>
-                            <div class="variant-list">
-                            <h2>Cake Description:</h2>
-                                <ul>
-                                    <li>Custom hiasan hanya pada permukaan kue.</li>
-                                    <li>Isian chocolate cake polos.</li>
-                                </ul>
+                            <div class="desc">
+                            <p>Kue ulang tahun mini yang mudah dibawa dan sederhana tetapi tetap berkesan.</p>
+                            <pre>Ukuran          :               Diameter 10cm<br>Harga            :               Mulai dari Rp50.000,-<br>Base kue       :               Chocolate cake
+                            </pre>
                             </div>
                         <div class="order">
                             <span>PEMESANAN</span>
