--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -197,29 +197,20 @@
         </div>
         <div class="right">
             <h1>D12cm</h1>
-                <div class="price-list">
-                <h2>Price List:</h2>
-                <h3>Ready Cake:</h3>
-                    <ul>
-                        <li>Rp75.000,-</li>
-                    </ul>
-                <h3>Custom Cake:</h3>
-                    <ul>
-                        <li>Custom full buttercream: Rp150.000,-</li>
-                        <li>Custom balutan full buttercream + topper karakter kertas: Rp170.000,-</li>
-                        <li>Custom balutan kue buttercream, hiasan fondant/bunga/boneka karakter khusus: Rp200.000,-</li>
-                        <li>Custom hiasan full fondant: mulai dari Rp250.000,-</li>
-                    </ul>
+                <div class="desc">
+                <p>Kue ulang tahun dengan berbagai pilihan varian yang lezat dan desain yang menawan untuk dirayakan bersama orang-orang terdekat..</p>
+                <pre>Ukuran          :               Diameter 12cm<br>Harga            :               Mulai dari Rp75.000,-<br>Base kue       :               Chocolate cake
+                </pre>
                 </div>
                 <div class="variant-list">
-                <h2>Variant List:</h2>
+                <h3>Variant List:</h3>
                     <ul>
-                        <li>Choco Delight (Chocolate cake dengan perpaduan coklat ganache dan krim coklat di setiap lapisannya).</li>
-                        <li>Double Choco (Chocolate cake yang berbalut coklat dengan isian krim coklat).</li>
-                        <li>Choconut (Chocolate cake dengan isian coklat ganache dan taburan kacang).</li>
-                        <li>Chocoberry (Chocolate cake dengan perpaduan selai strawberry dan coklat ganache).</li>
-                        <li>Blackforest (Chocolate cake dengan perpaduan selai strawberry dan krim).</li>
-                        <li>Red Velvet (Kue bolu berlapis creamcheese).</li>
+                        <li><strong>Choco Delight</strong> (Chocolate cake dengan perpaduan coklat ganache dan krim coklat di setiap lapisannya).</li>
+                        <li><strong>Double Choco</strong> (Chocolate cake yang berbalut coklat dengan isian krim coklat).</li>
+                        <li><strong>Choconut</strong> (Chocolate cake dengan isian coklat ganache dan taburan kacang).</li>
+                        <li><strong>Chocoberry</strong> (Chocolate cake dengan perpaduan selai strawberry dan coklat ganache).</li>
+                        <li><strong>Blackforest</strong> (Chocolate cake dengan perpaduan selai strawberry dan krim).</li>
+                        <li><strong>Red Velvet</strong> (Kue bolu berlapis creamcheese).</li>
                     </ul>
                 </div>
             <div class="order">
