--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -130,8 +130,8 @@
                         </div>
                     <div class="order">
                         <span>PEMESANAN</span>
-                        <button>insta</button>
-                        <button>wa</button>
+                        <button><img src="images/ig.png" style="width:18px; height:18px"></button>
+                        <button><img src="images/wa.png" style="width:18px; height:18px"></button>
                     </div>
                 </div>
             </div>
@@ -163,8 +163,8 @@
                             </div>
                         <div class="order">
                             <span>PEMESANAN</span>
-                            <button>insta</button>
-                            <button>wa</button>
+                            <button><img src="images/ig.png" style="width:18px; height:18px"></button>
+                            <button><img src="images/wa.png" style="width:18px; height:18px"></button>
                         </div>
                     </div>
                 </div>
@@ -215,8 +215,8 @@
                 </div>
             <div class="order">
                 <span>PEMESANAN</span>
-                <button>insta</button>
-                <button>wa</button>
+                 <button><img src="images/ig.png" style="width:18px; height:18px"></button>
+                 <button><img src="images/wa.png" style="width:18px; height:18px"></button>
             </div>
         </div>
     </div>
@@ -275,8 +275,8 @@
                     </div>
                 <div class="order">
                     <span>PEMESANAN</span>
-                    <button>insta</button>
-                    <button>wa</button>
+                    <button><img src="images/ig.png" style="width:18px; height:18px"></button>
+                    <button><img src="images/wa.png" style="width:18px; height:18px"></button>
                 </div>
             </div>
         </div>
@@ -325,8 +325,8 @@
                         </div>
                     <div class="order">
                         <span>PEMESANAN</span>
-                        <button>insta</button>
-                        <button>wa</button>
+                         <button><img src="images/ig.png" style="width:18px; height:18px"></button>
+                         <button><img src="images/wa.png" style="width:18px; height:18px"></button>
                     </div>
                 </div>
             </div>
@@ -366,8 +366,8 @@
                         </div>
                     <div class="order">
                         <span>PEMESANAN</span>
-                        <button>insta</button>
-                        <button>wa</button>
+                        <button><img src="images/ig.png" style="width:18px; height:18px"></button>
+                        <button><img src="images/wa.png" style="width:18px; height:18px"></button>
                     </div>
                 </div>
             </div>
