--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <div id="d15" class="tabcontent">    
         <div class="container flex">
             <div class="left">
-                <img src="images/chocoball.png" alt="Diameter 15cm Birthday Cake"/>
+                <img src="images/chocoball-d15.png" alt="Diameter 15cm Birthday Cake"/>
             </div>
             <div class="right">
                 <h1>D15cm</h1>
