--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cake Shop</title>
+    <title>ROYAL CAKE SAVOUR</title>
     <link rel="icon" type="image/x-icon" href="images/ROYAL CAKE savour full brown.png">
     <link href="css/style.css" rel="stylesheet">
     
