--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@
       
     <footer>
             <ul style="padding-top:10px">
-                <li><img src="images/wa.png" style="height:15px; width:15px"> 0896-1228-1227</li>
-                <li><img src="images/ig.png" style="height:15px; width:15px"> @royalcakesavour</li>
-                <li><img src="images/loc.png" style="height:17px; width:17px"> Jl. Wonobaru, Warkop Super Horizon (samping Indomaret)</li>
+                <li><img src="images/wa.png" style="height:15px; width:15px"> <b>0896-1228-1227</b></li>
+                <li><img src="images/ig.png" style="height:15px; width:15px"> <b>@royalcakesavour</b></li>
+                <li><img src="images/loc.png" style="height:17px; width:17px"> <b>Jl. Wonobaru, Warkop Super Horizon (samping Indomaret)</b></li>
             </ul>            
         </footer>
 
