--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h1 style="text-align: center; font-size: xx-large;">Find Us On</h1>
                 <p><img src="images/ig.png" style="width: 10%;"></p>
                 <p>Instagram @royalcakesavour</p>
-    
+            </section>
 
         <div id="bento" class="tabcontent">    
             <div class="container flex">
