--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <p><img src="images/ig.png" style="width: 10%;"></p>
                 <p>Instagram @royalcakesavour</p>
             </section>
+        </div>
 
         <div id="bento" class="tabcontent">    
             <div class="container flex">
